<resources>
    <string name="app_name">Student Scheduler</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="assessments">Assessments</string>
    <string name="title_activity_new_terms">New Terms</string>
    <string name="newTermTitle">New Term Title</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="addNewCourse">Add New Course</string>
    <string name="title">Title</string>
    <string name="courseInstructor">Instructor</string>
    <string name="instructorPhone">Phone</string>
    <string name="instructorEmail">Email</string>
    <string name="currentStat">Current Status:</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="objective">Objective</string>
    <string name="performance">Performance</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="note">Notes</string>
    <string name="coursesTerm">Courses in Term</string>
    <string-array name="status_array">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan To Take</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_new_assessment">NewAssessment</string>
    <string name="channel_name">myChannel</string>
    <string name="channel_description">myChannelDescription</string>

</resources>