<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="129dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/objective_btn"
        android:layout_width="181dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:text="@string/objective"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RadioButton
        android:id="@+id/performance_btn"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="19dp"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:text="@string/performance"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_type" />

    <TextView
        android:id="@+id/assessment_type"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:text="@string/assessment_type"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="191dp"
        android:layout_height="41dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="79dp"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:text="@string/startDate"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objective_btn" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:text="@string/endDate"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>