<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTD1"
        android:layout_width="163dp"
        android:layout_height="70dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="date"
        android:text="endDate"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/end_date"
        app:layout_constraintTop_toBottomOf="@+id/editTD2" />

    <EditText
        android:id="@+id/editTD2"
        android:layout_width="183dp"
        android:layout_height="68dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/end_date"
        app:layout_constraintTop_toBottomOf="@+id/perf_btn"
        tools:text="startDate" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="204dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:text="courseTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="129dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/obj_btn"
        android:layout_width="181dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:text="@string/objective"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv8" />

    <RadioButton
        android:id="@+id/perf_btn"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:text="@string/performance"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentType" />

    <TextView
        android:id="@+id/assessmentType"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="#673ab7"
        android:fontFamily="casual"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/assessment_type"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv8" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="191dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="79dp"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:text="@string/startDate"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obj_btn" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:text="@string/endDate"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv6" />

</androidx.constraintlayout.widget.ConstraintLayout>